Move bin to cli

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "build:styles:watch": "postcss -c .postcssrc.js -w 'src/presentations/**/index.css' --base src/presentations --dir './dist/public'",
     "copy:files": "cpx 'src/**/*.{csv,json,woff2,png,jpg,ico,wepb,js,svg,pug,html}' dist",
     "copy:files:watch": "cpx -w 'src/**/*.{csv,json,woff2,png,jpg,ico,webp,js,svg,pug,html}' dist",
-    "build:images": "ts-node bin/minimize-images.ts",
+    "build:images": "ts-node cli/minimize-images.ts",
     "test": "NODE_PATH=src mocha --require espower-typescript/guess './test/**/*.ts' --timeout 5000",
     "test:watch": "NODE_PATH=src mocha --require espower-typescript/guess './test/**/*.ts' --watch-extensions ts --watch",
-    "lint": "tslint --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
-    "lint:fix": "tslint --fix --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
-    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' 'test/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' 'bin/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' webpack.config.js .eslintrc.js .postcssrc.js",
+    "lint": "tslint --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'cli/**/*.{ts,tsx}'",
+    "lint:fix": "tslint --fix --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'cli/**/*.{ts,tsx}'",
+    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' 'test/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' 'cli/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' webpack.config.js .eslintrc.js .postcssrc.js",
     "precommit": "npm run lint:fix && npm run format",
     "speedtest": "curl https://api.speedtracker.org/v1/test/khirayama/speedtracker/master/default?key=$SPEEDTEST_KEY",
     "hint": "npx hint localhost:3030",
